2017/10/housing-guide/css/style.css
/* ... */
.cloud{
	height: 100px;
	width: 150px;
	top: 15%;
	left: 0px;
	position: absolute;
	background-image: url(../img/cloud.svg);
	background-size:  contain;

	-webkit-animation: moveclouds 105s linear infinite;
	-moz-animation: moveclouds 105s linear infinite;
	-o-animation: moveclouds 105s linear infinite;
	z-index: 1;
}

.cloud1{
	height: 66.66px;
	width: 100px;
	top: 10%;
	left: 200px;

	position: absolute;
	background-image: url(../img/cloud.svg);
	background-size:  contain;

	-webkit-animation: moveclouds 105s linear infinite;
	-moz-animation: moveclouds 105s linear infinite;
	-o-animation: moveclouds 105s linear infinite;
	z-index: 1;
}

.cloud2{
	height: 200px;
	width: 300px;
	top: 35%;
	left: 550px;

	position: absolute;
	background-image: url(../img/cloud.svg);
	background-size:  contain;

	-webkit-animation: moveclouds 75s linear infinite;
	-moz-animation: moveclouds 75s linear infinite;
	-o-animation: moveclouds 75s linear infinite;
	z-index: 1;
}

.cloud3{
	height: 100px;
	width: 150px;
	top: 55%;
	left: 200px;

	position: absolute;
	background-image: url(../img/cloud.svg);
	background-size:  contain;

	-webkit-animation: moveclouds 45s linear infinite;
	-moz-animation: moveclouds 45s linear infinite;
	-o-animation: moveclouds 45s linear infinite;
	z-index: 1;
}

.cloud4{
	height: 100px;
	width: 150px;
	top: 20%;
	left: 650px;

	position: absolute;
	background-image: url(../img/cloud.svg);
	background-size:  contain;

	-webkit-animation: moveclouds 85s linear infinite;
	-moz-animation: moveclouds 85s linear infinite;
	-o-animation: moveclouds 85s linear infinite;
	z-index: 1;
}

.cloud5{
	height: 100px;
	width: 150px;
	top: 17%;
	left: 50px;

	position: absolute;
	background-image: url(../img/cloud.svg);
	background-size:  contain;

	-webkit-animation: moveclouds 85s linear infinite;
	-moz-animation: moveclouds 85s linear infinite;
	-o-animation: moveclouds 85s linear infinite;
	z-index: 1;
}

.cloud6{
	height: 100px;
	width: 150px;
	top: 35%;
	left: 700px;

	position: absolute;
	background-image: url(../img/cloud.svg);
	background-size:  contain;

	-webkit-animation: moveclouds 85s linear infinite;
	-moz-animation: moveclouds 85s linear infinite;
	-o-animation: moveclouds 85s linear infinite;
	z-index: 1;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}


@keyframes scroller {
	from {
        transform: translate(0vw, 0);
    }
	to {
        transform: translate(-100%, 0);
    }
}


@-webkit-keyframes moveclouds {
	0% { opacity: 0; margin-left: 0vw;}
	20% {opacity: 1; }
	80% { opacity: 1; }
	100% { opacity: 0; margin-left: 100vw;}
}
@-moz-keyframes moveclouds {
	0% {margin-left: 1000px;}
	100% {margin-left: -1000px;}
}
@-o-keyframes moveclouds {
	0% {margin-left: 1000px;}
	100% {margin-left: -1000px;}
}

@-webkit-keyframes stroke-offset {
  0% {
    stroke-dashoffset: 35%;
    stroke-dasharray: 0 87.5%;
  }
}

@keyframes stroke-offset {
  0% {
    stroke-dashoffset: 35%;
    stroke-dasharray: 0 87.5%;
  }
}

@keyframes rotate10 {

	0% {transform: rotate(0deg);}
	25% {transform: rotate(10deg);}
	50% {transform: rotate(0deg);}
	75% {transform: rotate(-10deg);}
	100% {transform: rotate(0deg);}

}

@media only screen and (max-width: 950px) {

	svg {
	  font-size: 40%;
	}
	#year {
		font-size: 140px;
	}
	.text-copy {
	  stroke-width: 2px;
	}
}

@media only screen and (max-width: 850px) {
	#mobile-leaderboard {
		height: 200px;
		display: block;
	}
	#mobile-leaderboard div{
		margin: 0;
		height: 0;
	}
	#desktop-leaderboard {
		display: none;
	}
	.flex-container {
		display: block;
	}
	.flex-tile {
		width: 100%;
	}
	.article-container {
		display: block;
		padding-bottom: 0;
	}
	.article-tile {
		width: 100%;
		padding-top: 5%;
		padding-bottom: 10%;
	}

	#photo-tile-off, #photo-tile-on {
		display: none;

	}

	#photo-tile-off{
		display: none;

	}
	#on-campus #text-tile {
	background: url(../img/quad-fade.jpg) no-repeat center bottom ;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	}

	#off-campus #text-tile {
	background: url(../img/highrise-fade.jpg) no-repeat center bottom ;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	}
	.ribbon {
		font-size: 30px !important;
	}

	.footer-flex-container {
		display: block;
		height: 500px;
	}
	.footer-flex-item {
    	width: 100%;
    	padding: 0;
    }
    .footer-flex-item p {
    	margin-top: 30px;
    	margin-bottom: 0px;
    	padding: 0px;
    }
    .luxury-housing, .leasing, .famous-alums, {
		height: 1000px;
		width: 1000px;
	}
	.beercan {
		width: 200px;
		-webkit-background-size: 70% 70%;
		-moz-background-size: 70% 70%;
		-o-background-size: 70% 70%;
		background-size: 70% 70%;

	}
	.beercan img {
		animation: 10s rotate10 infinite linear;
		width: 200px;

	}
	.ad-tile {
		text-align: center;
		overflow: visible;
		margin-left: auto;
		margin-right: 0;
		padding: 0;
		padding-top: 20px;
		width: 100%;
	}
	.centering-div {
		text-align: center;
		padding: 0;
		width: auto;
	}


}

